# etoro-yfinance

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  conid_map.json  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: isin_cache.json  leonteq_exclusions.OLD-0605.json  leonteq_exclusions.json  leonteq_ibkr_resolution.OLD-0605.json  leonteq_ibkr_resolution.json  leonteq_liquidity.json  leonteq_mapping_verification.json  leonteq_openfigi.json  leonteq_override_candidates.json  leonteq_review.html  leonteq_review_flagged.json  leonteq_universe.OLD-0605.json  leonteq_universe.json  mapping_conid_cache.json  mapping_snapshot.json  portfolio_snapshot.json  strat_18_offensief_performance.json  strat_18_offensief_schedule.json  strat_18_resolution.json  strat_19_neutraal_performance.json  strat_19_neutraal_schedule.json  strat_19_resolution.json  strat_20_defensief_performance.json  strat_20_defensief_schedule.json  strat_20_resolution.json  strat_etf_resolution.json  strategies_review.html  strategies_snapshot.json
data/monitor/: groups.json  sector_Bank_Loan.json  sector_Basic_Materials.json  sector_Commodities_Broad_Basket.json  sector_Commodities_Focused.json  sector_Communication_Services.json  sector_Communications.json  sector_Conglomerates.json  sector_Consumer_Cyclical.json  sector_Consumer_Defensive.json  sector_Consumer_Goods.json  sector_Convertibles.json  sector_Corporate_Bond.json  sector_Crypto.json  sector_Defined_Outcome.json  sector_Derivative_Income.json  sector_Diversified_Emerging_Mkts.json  sector_Emerging_Markets_Bond.json  sector_Energy.json  sector_Energy_Limited_Partnership.json  sector_Equity_Digital_Assets.json  sector_Equity_Energy.json  sector_Equity_Precious_Metals.json  sector_Europe_Stock.json  sector_Financial.json  sector_Financial_Services.json  sector_Focused_Region.json  sector_Foreign_Large_Blend.json  sector_Foreign_Large_Growth.json  sector_Foreign_Large_Value.json  sector_Foreign_Small_Mid_Blend.json  sector_Global_Bond.json  sector_Global_Bond_USD_Hedged.json  sector_Global_Conservative_Allocation.json  sector_Global_Large_Stock_Blend.json  sector_Global_Moderate_Allocation.json  sector_Global_Moderately_Aggressive_Allocation.json  sector_Global_Real_Estate.json  sector_Global_Small_Mid_Stock.json  sector_Government_Mortgage_Backed_Bond.json  (+52 more)
deploy/: Caddyfile  README.md  install.sh  momentum-mapping.service  momentum-mapping.timer  momentum-portfolio.service  momentum-portfolio.timer  momentum-publish.service  momentum-publish.timer  momentum-rebalance.service  momentum-rebalance.timer  momentum-strategies.service  momentum-strategies.timer  momentum-trade-worker.service  momentum-web.service
docs/etoro/: index.md  llms.txt  openapi.json
docs/etoro/ai-agents/: etoro-skill.md
docs/etoro/api-reference/: deprecated-openapi.json
docs/etoro/getting-started/: authentication.md  rate-limits.md
docs/etoro/guides/: calculate-available-cash.md  calculate-equity.md  calculate-profit-loss.md  calculate-total-invested.md  get-instrument-id.md  market-orders.md  watchlists.md
docs/etoro/vibe-code/: antigravity.md  base44.md  claude-code.md  cursor.md  windsurf.md
docs/ibkr/: cpapi-v1-index.md  cpapi-v1.html  cpapi-v1.md  cpapi-v1.wp.json  ibkr-api-home.html  ibkr-api-home.md  market-data-subscriptions.html  market-data-subscriptions.md
docs/ibkr/cpapi-v1-sections/: access-token-endpoint.md  access-token-params.md  access-token-request.md  access-token-response.md  access-token.md  account-pnl.md  accounts.md  activate-alert.md  alerts.md  algo-conid-contract.md  all-watchlists.md  api-req.md  auth-faq.md  auth-sessions-background.md  auth-sessions-brokerage.md  auth-sessions-terminology.md  auth-status.md  authentication.md  bracket-orders.md  bulletin-subscriptions.md  calculate-k.md  canadian-trading.md  cancel-order.md  cash-qty.md  category-tree.md  combo-orders.md  compute-caclulation.md  compute-lst.md  compute-prepend.md  configuration.md  contract-details-forecastx.md  contract-positions.md  contract-rules.md  contract.md  cp-tutorial.md  (+219 more)
examples/: target-portfolio.example.json
scripts/: alpha_lab.py  backfill_sectors.py  build_dashboard.py  build_eur_series.py  build_liquidity.py  build_review_site.py  build_universe.py  check_bbterminal.py  check_oauth.py  enrich_liquidity.py  etf_categories.py  etoro_isin.py  etoro_region.py  etoro_trade.py  etoro_universe.py  extract_dh_prime.py  fetch_bbterminal.py  fetch_ecb_rates.py  fetch_etoro_docs.py  fetch_universes.py  inspect_candidates.py  openfigi_check.py  place_trade.py  rebalance.py  resolve_holdings.py  resolve_strategies.py  resolve_universe.py  sync_conid_map.py  test_ntfy.py  test_target_fetch.py  trim_unclosed.py  use_env.py  verify_mapping.py
src/etoro_yfinance/: __init__.py  backtest.py  broker.py  config.py  currency.py  eligibility.py  etoro_client.py  launcher.py  liquidity.py  momentum.py  monitor.py  prices.py  signals.py  universe.py  yfinance_map.py
src/ibkr_portfolio_connect/: __init__.py  bb_rebalance.py  bbterminal_client.py  cli.py  config.py  conid_map.py  contract_resolver.py  cost.py  dashboard.py  dashboard_server.py  db.py  executor.py  ibkr_client.py  launcher.py  mapping_snapshot.py  name_match.py  notify.py  order_ticket.py  pipeline.py  portfolio_snapshot.py  publisher.py  rebalance.py  run_record.py  safety.py  schema.py  strategies_snapshot.py  target.py
tests/: conftest.py  test_backtest.py  test_bb_rebalance.py  test_config.py  test_conid_map.py  test_contract_resolver.py  test_cost.py  test_dashboard.py  test_etoro_client.py  test_executor.py  test_ibkr_client.py  test_launcher.py  test_mapping_snapshot.py  test_momentum.py  test_monitor.py  test_name_match.py  test_notify.py  test_pipeline.py  test_positions.py  test_prices.py  test_rebalance.py  test_run_record.py  test_safety.py  test_schema.py  test_signals.py  test_single_order.py  test_slippage.py  test_strategies_snapshot.py  test_strategy_buy.py  test_target.py  test_universe.py  test_web_stack.py  test_yfinance_map.py
(+209 files in other folders)
