[project]
name = "etoro-yfinance"
version = "0.1.0"
description = "eToro tradable universe mapped to yfinance analysis tickers, a read-only web UI, and an eToro trading CLI."
readme = "README.md"
authors = [
    { name = "Flazed", email = "35650338+flazedd@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=17.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
# The read-only FastAPI + HTMX web app (eToro↔yfinance universe + diagnostics).
web = [
    "fastapi>=0.137.1",
    "uvicorn>=0.49.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.18",  # FastAPI Form() parsing (POST /universe/create)
]
# yfinance history validation (scripts/etoro_universe.py --validate).
analysis = [
    "yfinance>=0.2.40",
]

[project.scripts]
momentum-dev = "etoro_yfinance.launcher:dev"
momentum-prod = "etoro_yfinance.launcher:prod"
momentum-up = "etoro_yfinance.launcher:main"
momentum-web = "etoro_yfinance.web.server:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.152.6",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "N",    # pep8-naming
    "PT",   # flake8-pytest-style
    "PTH",  # use pathlib
    "RET",  # flake8-return
    "TID",  # flake8-tidy-imports
]
ignore = [
    "E501",  # line too long — formatter handles wrapping; long URLs/docstrings ok
    "RUF001", "RUF002", "RUF003",  # ambiguous unicode (× − – etc.) — intentional in docs/UI
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",  # assert allowed in tests
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true
show_error_codes = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
# pytest's monkeypatch / fixtures are typed loosely; relax in test files only
module = "tests.*"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
# pandas/yfinance ship no stubs; treat them as Any rather than pulling in
# pandas-stubs (which fights strict mode all over the vectorized code).
module = ["pandas.*", "yfinance.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
xfail_strict = true
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["src/etoro_yfinance"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
